syntax = "proto3";

package grpctest;

import "google/protobuf/timestamp.proto";

service GrpcTest {
  rpc GetMessage(UserMessage) returns (ProcessedMessage) {}

  rpc GetMultiMessage(UserMessage) returns (stream ProcessedMessage) {}

  rpc SendMultiMessage(stream UserMessage) returns (ProcessedMessage) {}

  rpc GetSendMultiMessage(stream UserMessage) returns (stream ProcessedMessage) {}
}

message UserMessage {
  string text = 1;
}

message ProcessedMessage {
  UserMessage message = 1;
  google.protobuf.Timestamp receivedTime = 2;
}
